<resources>
    <string name="app_name">TipCalculator</string>
    <string name="bill">Bill</string>
    <string name="bill_amount">$100.00</string>
    <string name="tip">Tip</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="tip_percent">15</string>
    <string name="percentage">%</string>
    <string name="tip_amount">Tip Amount</string>
    <string name="tip_dollars">$0.00</string>
    <string name="total">Total</string>
    <string name="total_dollars">$00.00</string>
</resources>
